--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 pandas
 numpy
 pyyaml
+git+https://github.com/htm-community/htm.core.git
 git+https://github.com/gotham29/htm_streamer.git
-htm-core
