--- a/config.yaml
+++ b/config.yaml
@@ -1,9 +1,73 @@
-streaming:
-  interval: 0.5  # seconds per data point
+models_state:
+  model_for_each_feature: false
+  return_pred_count: true
+  use_sp: false
 
-htm:
-  learning_rate: 0.01
-  encoder_params:
-    min_val: 0
-    max_val: 100
-  anomaly_threshold: 0.8
+features:
+  ROLL_STICK:
+    max: null
+    min: null
+    type: float
+    weight: 1.0
+  PITCH_STIC:
+    max: null
+    min: null
+    type: float
+    weight: 1.0
+
+models_encoders:
+  n: 400
+  w: 21
+  n_buckets: 130
+  p_padding: 20
+  seed: 0
+
+models_params:
+  anomaly_likelihood:
+    probationaryPeriod: 500
+    reestimationPeriod: 100
+  sp:
+    potentialPct: 0.8
+    columnCount: 2048
+    globalInhibition: true
+    boostStrength: 0.0
+    localAreaDensity: 0.0  #0.1
+    stimulusThreshold: 0.0
+    numActiveColumnsPerInhArea: 40  #0
+    synPermActiveInc: 0.003
+    synPermConnected: 0.2
+    synPermInactiveDec: 0.0005
+    wrapAround: true
+    minPctOverlapDutyCycle: 0.001
+    dutyCyclePeriod: 1000
+    seed: 0  #1956
+  tm:
+    activationThreshold: 20
+    cellsPerColumn: 32
+    columnDimensions: 2048
+    initialPerm: 0.24
+    maxSegmentsPerCell: 128
+    maxSynapsesPerSegment: 128
+    minThreshold: 13
+    newSynapseCount: 31
+    permanenceDec: 0.008
+    permanenceInc: 0.04
+    permanenceConnected: 0.5
+    predictedSegmentDecrement: 0.001
+    seed: 0  #1960
+
+models_predictor:
+  enable: false
+  resolution: 1
+  sdrc_alpha: 0.1
+  steps_ahead:
+  - 1
+  - 2
+
+spatial_anomaly:
+  enable: true
+  tolerance: 0.05
+  perc_min: 0
+  perc_max: 100
+  anom_prop: 0.3
+  window: 100000
